syntax = "proto3";

option csharp_namespace = "GrpcService";

package Car;

message CarRequest{
	int32 ID =  1;
}

message CarResponse{
	string CarName = 1;
	string CarPlate = 2;

}

message CarListResponse{
	repeated CarResponse cars = 1;
}

service CarDetails{
	rpc GetCar(CarRequest) returns (CarListResponse);
}